--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,9 +14,9 @@
         android:layout_height="wrap_content"
         android:text="GoTo2"
         android:id="@+id/button1"
-        android:layout_marginTop="47dp"
+        android:layout_marginTop="100dp"
+        android:nestedScrollingEnabled="false"
         android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true"
-        android:nestedScrollingEnabled="false" />
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
