--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,10 +47,11 @@
         android:layout_height="wrap_content"
         android:text="GoTo2"
         android:id="@+id/button1"
-        android:layout_marginTop="100dp"
         android:nestedScrollingEnabled="false"
-        android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true" />
+        android:layout_below="@+id/show_question"
+        android:layout_toRightOf="@+id/textView"
+        android:layout_toEndOf="@+id/textView"
+        android:onClick="onGoto2Click" />
         android:layout_centerHorizontal="true"
         android:nestedScrollingEnabled="false"
         android:onClick="onGoto2Click" />
