--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="What is your question?"
         android:id="@+id/textView2"
-        android:layout_marginTop="114dp"
+        android:layout_marginTop="50dp"
         android:layout_below="@+id/textView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -50,22 +50,11 @@
         android:nestedScrollingEnabled="false"
         android:onClick="onGoto2Click"
         android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/show_question"
-        android:layout_alignEnd="@+id/show_question" />
+        android:layout_alignRight="@+id/question_input"
+        android:layout_alignEnd="@+id/question_input" /><![CDATA[
         android:layout_centerHorizontal="true"
         android:nestedScrollingEnabled="false"
         android:onClick="onGoto2Click" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/show_question"
-        android:layout_marginTop="42dp"
-        android:layout_below="@+id/send_question"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/question_input"
-        android:layout_alignEnd="@+id/question_input" />
-
+    ]]>
 </RelativeLayout>
